14_Konecta/02_services_K8s_manifests/01_frontend/04_ui_clusterip_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: konecta
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/instance: frontend
    app.kubernetes.io/component: service
    app.kubernetes.io/owner: gleamgoods
spec:
  type: ClusterIP  
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/instance: frontend
    app.kubernetes.io/component: service
    app.kubernetes.io/owner: konecta
